# omarchy-fetch-docs

./: pyproject.toml
src/fetch_docs/: __init__.py  fetch.py
