[project]
name = "fetch-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Kordel", email = "pkordel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "markdownify>=1.2.0",
    "pydantic>=2.11.9",
    "readabilipy>=0.3.0",
]

[project.scripts]
fetch-docs = "fetch_docs:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
